--- a/.github/workflows/deploy-frontend-challenge-2.yml
+++ b/.github/workflows/deploy-frontend-challenge-2.yml
@@ -10,32 +10,29 @@ on:
     paths:
       - "frontend_challenge_2/challenges/tsbs0514/**"
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
-  pages: write
-  id-token: write
+  pages: write # ← Pages へ書き込み
+  id-token: write # ← OIDC デプロイ用
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
+  # ────────────────────────────────────────────────
   build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
-          cache-dependency-path: "frontend_challenge_2/challenges/tsbs0514/package-lock.json"
+          cache: npm
+          cache-dependency-path: |
+            frontend_challenge_2/challenges/tsbs0514/package-lock.json
 
       - name: Install dependencies
         working-directory: frontend_challenge_2/challenges/tsbs0514
@@ -45,7 +42,7 @@ jobs:
         working-directory: frontend_challenge_2/challenges/tsbs0514
         run: npx playwright install --with-deps
 
-      - name: Run tests
+      - name: Run unit tests
         working-directory: frontend_challenge_2/challenges/tsbs0514
         run: npm test
 
@@ -56,26 +53,28 @@ jobs:
           CI: true
         timeout-minutes: 10
 
-      - name: Build application
+      - name: Build & export Next.js
         working-directory: frontend_challenge_2/challenges/tsbs0514
-        run: npm run build
+        run: npm run build # next build → next export (output: export)
 
-      - name: Upload artifact
+      # GitHub Pages 用アーティファクトをアップロード
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: frontend_challenge_2/challenges/tsbs0514/out
 
-  # Deployment job
+  # ────────────────────────────────────────────────
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
+      url: ${{ steps.deploy.outputs.page_url }}
+
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/configure-pages@v4
-        with:
-          static_site_generator: next
-          generator_config_file: next.config.mjs
+      # GitHub Pages を初期化
+      - uses: actions/configure-pages@v4
+
+      # アーティファクトをデプロイ
+      - id: deploy
+        uses: actions/deploy-pages@v4
