--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,6 +1,8 @@
-# Frontend Challenge 2 - Electric Simulation App
-# Deploy to GitHub Pages
-name: Deploy Electric Simulation App
+# Sample workflow for building and deploying a Next.js site to GitHub Pages
+#
+# To get started with Next.js see: https://nextjs.org/docs/getting-started
+#
+name: Deploy Next.js site to Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -31,55 +33,50 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
+      - name: Detect package manager
+        id: detect-package-manager
+        run: |
+          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+            echo "manager=yarn" >> $GITHUB_OUTPUT
+            echo "command=install" >> $GITHUB_OUTPUT
+            echo "runner=yarn" >> $GITHUB_OUTPUT
+            exit 0
+          elif [ -f "${{ github.workspace }}/package.json" ]; then
+            echo "manager=npm" >> $GITHUB_OUTPUT
+            echo "command=ci" >> $GITHUB_OUTPUT
+            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            exit 0
+          else
+            echo "Unable to determine package manager"
+            exit 1
+          fi
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
-          cache-dependency-path: "frontend_challenge_2/challenges/tsbs0514/package-lock.json"
-
+          cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
           # Automatically inject basePath in your Next.js configuration file and disable
           # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
+          #
+          # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
-
       - name: Restore cache
         uses: actions/cache@v4
         with:
           path: |
-            frontend_challenge_2/challenges/tsbs0514/.next/cache
+            .next/cache
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('frontend_challenge_2/challenges/tsbs0514/package-lock.json') }}-${{ hashFiles('frontend_challenge_2/challenges/tsbs0514/**.[jt]s', 'frontend_challenge_2/challenges/tsbs0514/**.[jt]sx') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('frontend_challenge_2/challenges/tsbs0514/package-lock.json') }}-
-
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
-        working-directory: frontend_challenge_2/challenges/tsbs0514
-        run: npm ci
-
-      - name: Install Playwright browsers
-        working-directory: frontend_challenge_2/challenges/tsbs0514
-        run: npx playwright install --with-deps
-
-      - name: Run tests
-        working-directory: frontend_challenge_2/challenges/tsbs0514
-        run: npm test
-
-      - name: Run E2E tests
-        working-directory: frontend_challenge_2/challenges/tsbs0514
-        run: npm run test:e2e
-        env:
-          CI: true
-        timeout-minutes: 10
-
+        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
-        working-directory: frontend_challenge_2/challenges/tsbs0514
-        run: npm run build
-
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
