--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,8 +1,6 @@
-# Sample workflow for building and deploying a Next.js site to GitHub Pages
-#
-# To get started with Next.js see: https://nextjs.org/docs/getting-started
-#
-name: Deploy Next.js site to Pages
+# Frontend Challenge 2 - Electric Simulation App
+# Deploy to GitHub Pages
+name: Deploy Electric Simulation App
 
 on:
   # Runs on pushes targeting the default branch
@@ -33,34 +31,55 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "npm"
           cache-dependency-path: "frontend_challenge_2/challenges/tsbs0514/package-lock.json"
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
           # Automatically inject basePath in your Next.js configuration file and disable
           # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-          #
-          # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: next
+
       - name: Restore cache
         uses: actions/cache@v4
         with:
           path: |
-            .next/cache
+            frontend_challenge_2/challenges/tsbs0514/.next/cache
           # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('frontend_challenge_2/challenges/tsbs0514/package-lock.json') }}-${{ hashFiles('frontend_challenge_2/challenges/tsbs0514/**.[jt]s', 'frontend_challenge_2/challenges/tsbs0514/**.[jt]sx') }}
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+            ${{ runner.os }}-nextjs-${{ hashFiles('frontend_challenge_2/challenges/tsbs0514/package-lock.json') }}-
+
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        working-directory: frontend_challenge_2/challenges/tsbs0514
+        run: npm ci
+
+      - name: Install Playwright browsers
+        working-directory: frontend_challenge_2/challenges/tsbs0514
+        run: npx playwright install --with-deps
+
+      - name: Run tests
+        working-directory: frontend_challenge_2/challenges/tsbs0514
+        run: npm test
+
+      - name: Run E2E tests
+        working-directory: frontend_challenge_2/challenges/tsbs0514
+        run: npm run test:e2e
+        env:
+          CI: true
+        timeout-minutes: 10
+
       - name: Build with Next.js
+        working-directory: frontend_challenge_2/challenges/tsbs0514
         run: npm run build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
