--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -83,6 +83,9 @@ jobs:
       - name: Build with Next.js
         working-directory: frontend_challenge_2/challenges/tsbs0514
         run: npm run build
+        env:
+          NODE_ENV: production
+          GITHUB_PAGES: true
 
       - name: Debug build output
         working-directory: frontend_challenge_2/challenges/tsbs0514
