--- a/frontend_challenge_2/challenges/tsbs0514/package.json
+++ b/frontend_challenge_2/challenges/tsbs0514/package.json
@@ -43,8 +43,7 @@
     "playwright": "^1.54.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
-    "whatwg-fetch": "^3.6.20"
+    "typescript": "^5"
   },
   "msw": {
     "workerDirectory": [
